2006-12-15  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/Contacts/SOGoContactFolders.m ([SOGoContactFolders
	-roleOfUser:uidinContext:context]): new method that returns
	SOGoRole_Assistant when the user is an assistant or a delegate on
	the "personal" ab object. This is so that setting roles on the
	SOGoContactFolders object is not required.

2006-12-14  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* Main/SOGo.m: declare "Freebusy" permissions for the top objects.

	* UI/Contacts/UIxContactsAclsSelection.m: new component specific
	to the handling of the user selection for the acls.

	* SoObjects/SOGo/SOGoPermissions.[hm]: new module that extends the
	values from SoPermissions with ones specific to SOGo.

	* SoObjects/SOGo/SOGoAclsFolder.[hm]: new class module that
	handles the storage for the acls.

	* SoObjects/Appointments/SOGoCalendarComponent.[hm]: new parent
	class for SOGoAppointmentObject and SOGoTaskObject.

	* UI/Common/UIxAclEditor.[hm]: new component that provides a
	general editor for folder acls.

	* SoObjects/SOGo/NSString+Utilities.[hm]: old "NSString+URL"
	renamed.
	([NSString -davMethodToObjC]): method that returns the method name 
	for a DAV property implementation.

	* SoObjects/SOGo/NSArray+Utilities.m: new extension module to
	NSArray.
	([NSArray -stringsWithFormat:format]): new method that returns
	formatted occurences of the strings stored in the array.

	* SoObjects/SOGo/SOGoDAVRendererTypes.m ([SOGoDAVSet
	+davSetWithArray:newValuesofValuesTaggedAs:newValueTag]): a new
	subclass module of SoWebDAVValue that supports collections of
	properties of the same type.

2006-11-21  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/Mailer/SOGoMailAccount.m ([SOGoMailAccount
	-lookupFolder:ofClassNamed:inContext:]): added the ability to
	configure the name of the SOGoDraftFolders with the ud var
	"SOGoDraftsFolderName".

2006-11-17  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/SOGo/SOGoObject.m ([SOGoObject